Switch from newInstance() to getConstructor().newInstance()